--- a/bootstrap.css
+++ b/bootstrap.css
@@ -508,7 +508,8 @@ mark,
 
 code {
   font-size: 87.5%;
-  color: #e83e8c;
+  /* color: #e83e8c; */
+  color: #00ff00;
   word-break: break-word;
 }
 
