Revert "try: code color"
This reverts commit c38203b73f8c41b4d6cd4edaceba55f0076beedf.

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -508,8 +508,7 @@ mark,
 
 code {
   font-size: 87.5%;
-  /* color: #e83e8c; */
-  color: #00ff00;
+  color: #e83e8c;
   word-break: break-word;
 }
 
